# multi-tenant-rag-platform

./: .gitignore  LICENSE  README.md  docker-compose.infra.yml
backend/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_PLAN.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/middleware/: auth.py  rate_limit.py
backend/app/api/v1/: admin.py  documents.py  health.py  query.py  router.py
backend/app/cache/: redis_client.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 763c22377114_initial.py
backend/app/models/: __init__.py  api_key.py  document.py  eval_result.py  query_log.py  tenant.py
backend/app/schemas/: document.py  eval.py  query.py  tenant.py
backend/app/services/: document_service.py  tenant_service.py
backend/app/services/evaluation/: ab_comparison.py  ragas_runner.py
backend/app/services/generation/: citation_builder.py  cost_tracker.py  llm_service.py  streaming.py
backend/app/services/ingestion/: pipeline.py
backend/app/services/retrieval/: dense_retriever.py  fusion.py  pipeline.py  reranker.py  sparse_retriever.py
backend/app/utils/: errors.py  hashing.py  logging.py
backend/app/vector_store/: embedding.py  qdrant_client.py
backend/eval/: eval_set.json  run_ab_comparison.py  run_ragas.py  run_rerank_analysis.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_ingestion_pipeline.py  test_retrieval_pipeline.py  test_tenant_isolation.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_chunking.py  test_citation_builder.py  test_cost_tracker.py  test_dense_retriever.py  test_document_service.py  test_errors.py  test_extractors.py  test_fusion.py  test_get_chunker.py  test_hashing.py  test_llm_service.py  test_parent_child_chunking.py  test_rate_limit_middleware.py  test_retrieval_pipeline.py
(+75 files in other folders)
